2010-02-09  Satoshi Konno <skonno@cybergarage.org>
	* Added project files for Visual Studio 2008.
	* Disabled AC_PROG_LIBTOOL and HAVE_LIBTOOL in confugre.in and Makefile.am.
	* Disabled libxml2 and libcurl as default in confugre.in.
	* Added support for SO_NOSIGPIPES in configure.in.
	* Fixed some errors to compile normally on Ubuntu 9.10.
	* Changed CG_USE_WIN32_GETHOSTADDRESSES flag as default for Windows platform.
	* Fixed cg_upnp_device_unsubscriptionrecieved() to unscribe normally.
	* Fixed cg_upnp_device_ssdpmessagereceived() not to ignore IPv6 multicast.
	* Updated cg_upnp_createuuid() to use naitive functions on Windows and Unix platforms.
	
2010-01-20  Satoshi Konno <skonno@cybergarage.org>
	* Removed service mutex control from cg_upnp_service_addsubscriber() to avoid deadlock.

2009-09-01  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_soap_response_getstatuscode().
	* Added cg_upnp_event_notify_response_getstatuscode().

2009-08-27  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_argument_setfloatvalue() and cg_upnp_argument_getfloatvalue().
	* Added cg_upnp_argument_setdoublevalue() and cg_upnp_argument_getdoublevalue().
	* Added cg_string_getfloatvalue() and cg_string_getdoublevalue().
	* Added cg_float2str() and cg_double2str().
	* Added cg_str2float() and cg_str2double().
	* Added cg_upnp_device_gethttpserverlist() and cg_upnp_device_getssdpserverlist().
	* Added cg_http_server_getsocket().
	* Added CGUpnpDevice::isRunning().

2009-06-01  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_dictionary_*();
	* Added cg_net_uri_getquerydictionary().
	* Fixed a buffer overrun of cg_xml_escapechars().
	* Changed cg_socket_setid() not to raise SIGPIPE on iPhone.
	
2009-05-28  Satoshi Konno <skonno@cybergarage.org>
	* Improved cg_string_*() and cg_list_*() not to abort when the specified string object is NULL.
	* Added cg_upnp_device_getsmallesticonbymimetype().
	* Added cg_upnp_device_addicon().
	* Added CGUpnpDevice:setDeviceType().